Allmost doen, some bugs left

--- a/src/config/locales/ru.json
+++ b/src/config/locales/ru.json
@@ -43,7 +43,7 @@
     "Features": "Характеристики",
     "First name": "Имя",
     "Go To Store": "Перейти в магазин",
-    "Home": "Главная",
+    "Homee": "Главная",
     "Catalog": "Каталог",
     "Information": "Информация",
     "{{count}} item(s)": "{{count}} шт.",
@@ -79,7 +79,7 @@
     "Discount": "Скидка",
     "Save": "Сохранить",
     "Search": "Найти",
-    "Send review": "Отправить отзыв",
+    "Send review": "Отправить",
     "Share product": "Поделиться",
     "Shipping": "Доставка",
     "Shipping address": "Адрес доставки",
